# ChangeLog for dev-libs/zziplib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.49 2008/10/12 01:20:28 mr_bones_ Exp $

  12 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  zziplib-0.13.49-r1.ebuild:
  fix test with -j > 1 (bug #241186)

  09 Oct 2008; Mike Frysinger <vapier@gentoo.org>
  +files/zziplib-0.13.49-configure-sed.patch, zziplib-0.13.49-r1.ebuild:
  Fix by Elias Pipping for missing call to sed in configure #240556.

*zziplib-0.13.49-r1 (29 Aug 2008)

  29 Aug 2008; Mike Frysinger <vapier@gentoo.org>
  files/zziplib-0.13.49-python.patch, +zziplib-0.13.49-r1.ebuild:
  Fix LDFLAG bleeding into pkg config files #235511 by Alexis Ballier. Fix
  python patch to apply to configure. Do install bogus dead lib symlinks.

  07 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  +files/zziplib-0.13.49-python.patch, zziplib-0.13.49.ebuild:
  Added patch to use default Python version installed. bug #174189

  26 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -files/zziplib-0.13.45-manpages.patch,
  -files/zziplib-0.13.45-sys-types.patch, -zziplib-0.13.36.ebuild,
  -zziplib-0.13.38.ebuild, -zziplib-0.13.45.ebuild, zziplib-0.13.49.ebuild:
  keyword up and remove old vulnerable versions (bug #171441)

  24 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  zziplib-0.13.49.ebuild:
  Stable on amd64/ia64 wrt bug #171441.

  24 Mar 2007; Markus Rothe <corsair@gentoo.org> zziplib-0.13.49.ebuild:
  Stable on ppc64; bug #171441

  23 Mar 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  zziplib-0.13.49.ebuild:
  Stable on ppc wrt bug #171441.

  20 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org> zziplib-0.13.49.ebuild:
  Stable on alpha wrt security bug #171441

  20 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  zziplib-0.13.45.ebuild, zziplib-0.13.49.ebuild:
  Keyworded -sparc since they're broken see #171441

  20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>