@@ -2,7 +2,7 @@ AUX zziplib-0.13.49-SDL-test.patch 392 RMD160 07322bd7d56a58f3aa603d728e2f41a34d
 AUX zziplib-0.13.49-configure-sed.patch 533 RMD160 cd6f0f54198ef9cb84ef857ab141c508d055b62a SHA1 684f2e7cd3559413094f8e94dd9d01b83c4b9d66 SHA256 b3cbc83d5eec056168a96d70be46f5da4c0cd3013868e7263189181a547b9882
 AUX zziplib-0.13.49-python.patch 366 RMD160 329f98dd9a40ed1f8976b56a1eca7f815c924a3b SHA1 5653de26626bb3752a22e2f69b078f410c87f68e SHA256 ce5acf47b2186c59f8080892542bd00034770297160ba00a0d30af47795e3a2b
 DIST zziplib-0.13.49.tar.bz2 654842 RMD160 3ba64880298edaf192a9a773262810ff08d710e4 SHA1 72825fcbab93377d7866a8e6a9dfdef53f0343fa SHA256 f57c4e33eb2cdd87a6c2f01bfa4794340fbe61ea1a1cfc7dac3b6671e1dd22af
-EBUILD zziplib-0.13.49-r1.ebuild 1466 RMD160 5964de526dc86fbd5fe61c84c9ef8fb4bd92b127 SHA1 f8b66b7ec32653bd413da1c5fd17117c363ef659 SHA256 42ef06f89b0c29f6cb2667f564d37f5d7c9c34250e4443df3773d884d81d4214
+EBUILD zziplib-0.13.49-r1.ebuild 1489 RMD160 eaf9adcd850773a0aaf3cfe0fe2b1e800633eb0d SHA1 a008eb01aa326899aab4c9ebb761bb73999a8e36 SHA256 a80945b217953a6aa18e653fd0d99592ba0e235392faac8080c312acf20a3349
 EBUILD zziplib-0.13.49.ebuild 1284 RMD160 c271d0d690ea1a39636b224482f626025b364ded SHA1 6fbf5d40fe519fd2088f0674a243e9613161b2c5 SHA256 4e5c1d9a3ba89e1688b1029f83b3fb43a5caa44f0ad10501b387609bd2f77a81
-MISC ChangeLog 6551 RMD160 224b8ba05680d0386abdcab0e25f8a0439ae7c0e SHA1 9201fd3da87ab9f3a9b021f5bbdd79ab904dc8c1 SHA256 14c4b91bef9485497f6166d783817609efd2bc368afb17589d6074c5b4da7057
+MISC ChangeLog 6675 RMD160 56afc5d26698042ba401af3a6e935a34771a213b SHA1 fe81958ca0081866a879c66dca554f580581e80c SHA256 2c902f1cc07963bc11a36e36ba4fa6ec3ebacb7ca820dc8372344187bce5ad1d
 MISC metadata.xml 285 RMD160 3faddc79f99fd2e176331b7691ab303d68afff1f SHA1 bf0a1e4c233011a630921773d4968d1e5fe96265 SHA256 aabbb33ddce6a4c9c25c0e405250095050964ba66593fdeef74ac0023bdb301c
