@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/zziplib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.49 2008/10/12 01:20:28 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.50 2008/11/09 16:11:43 pva Exp $
+
+  09 Nov 2008; Peter Volkov <pva@gentoo.org> zziplib-0.13.49-r1.ebuild:
+  Dependencies required to run tests fixed, bug #246164.
 
   12 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
   zziplib-0.13.49-r1.ebuild:
